# platform.core.multimedia.libmedia-thumbnail

./: AUTHORS  CMakeLists.txt  LICENSE  NOTICE  license  media-thumbnail-server.manifest  media-thumbnail.pc.in  project.config  thumbsvr
TC/: tet_scen
TC/utc/: Makefile  tslist  utc_media_thumb_common.h  utc_thumbnail_get_data_func.c  utc_thumbnail_get_data_func.h  utc_thumbnail_request_from_db_func.c  utc_thumbnail_request_from_db_func.h  utc_thumbnail_request_save_to_file_func.c  utc_thumbnail_request_save_to_file_func.h
debian/: changelog  control  copyright  libmedia-thumbnail-dev.install.in  libmedia-thumbnail.install.in  media-thumbnail-server.install.in  rules
include/: media-thumb-error.h  media-thumb-types.h  media-thumbnail-private.h  media-thumbnail.h
md5/: md5.c  md5.h  media-thumb-hash.c
packaging/: libmedia-thumbnail.changes  libmedia-thumbnail.service  libmedia-thumbnail.spec  thumbnail-server.service
server/: CMakeLists.txt  thumb-server-dcm.c  thumb-server-internal.c  thumb-server.c
server/include/: thumb-server-dcm-debug.h  thumb-server-dcm.h  thumb-server-internal.h
src/: media-thumb-internal.c  media-thumbnail.c
src/codec/: IfegDecodeAGIF.c  img-codec-osal.c  img-codec-parser.c  img-codec.c
src/include/: media-thumb-internal.h
src/include/codec/: AGifFrameInfo.h  IfegDecodeAGIF.h  img-codec-agif.h  img-codec-common.h  img-codec-config.h  img-codec-osal.h  img-codec-parser.h  img-codec.h
src/include/ipc/: media-thumb-ipc.h
src/include/util/: media-thumb-db.h  media-thumb-debug.h  media-thumb-util.h
src/ipc/: media-thumb-ipc.c
src/util/: media-thumb-db.c  media-thumb-debug.c  media-thumb-util.c
test/: CMakeLists.txt  test-thumb.c
